# claumini

./: .gitignore  Cargo.toml  SPEC.md
agentless_demo/: Cargo.toml
agentless_demo/src/: lib.rs  main.rs
agentless_demo/tests/: fanout_flow.rs
claumini-core/: Cargo.toml
claumini-core/src/: agent.rs  error.rs  lib.rs  model.rs  payload.rs  runtime.rs  tool.rs
claumini-models/: Cargo.toml
claumini-models/src/: claude.rs  config.rs  lib.rs  mock.rs  openai.rs
claumini-models/tests/: bootstrap.rs
claumini-runtime/: Cargo.toml
claumini-runtime/src/: artifacts.rs  lib.rs  prompt_agent.rs  runtime_tools.rs  session.rs  skills.rs
claumini-runtime/tests/: live_anthropic.rs  live_openai_compatible.rs  prompt_agent.rs
claumini-tools/: Cargo.toml
claumini-tools-macros/: Cargo.toml
claumini-tools-macros/src/: lib.rs
claumini-tools/src/: adapters.rs  lib.rs  metadata.rs  repo.rs
claumini-tools/tests/: async_adapter.rs  registration.rs
docs/: security-publish-review.md
docs/plans/: 2026-04-15-claumini-v1-bootstrap.md  2026-04-15-claumini-v1-completion.md  2026-04-15-live-llm-provider-smoke-tests.md
