[package]
name = "agentless_demo"
version.workspace = true
edition.workspace = true

[dependencies]
claumini-core = { path = "../claumini-core" }
claumini-runtime = { path = "../claumini-runtime" }
claumini-tools = { path = "../claumini-tools" }
claumini-models = { path = "../claumini-models" }
async-trait.workspace = true
dotenvy = "0.15"
schemars = { version = "1.0.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "agentless_demo"
path = "src/main.rs"
