[package]
name = "claumini-tools"
version.workspace = true
edition.workspace = true

[dependencies]
claumini-core = { path = "../claumini-core" }
claumini-tools-macros = { path = "../claumini-tools-macros" }
async-trait.workspace = true
regex.workspace = true
schemars = { version = "1.0.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
